# procurement-agent

./: .env.example  AGENTS.md  README.md  agent.py  backoutPlan.md  models.py  pyproject.toml  user-stories.md
.github/: copilot-instructions.md
.github/skills/: rapid-peer-review.md
data/: __init__.py  loader.py
docs/: go-no-go-checklist.md  procurement-domain-exploration-summary.md
mock_data/: budgets.json  policies.json  requests.json  vendors.json
openspec/: README.adoc
openspec/changes/add-procurement-intelligence-agent/: design.md  proposal.md  tasks.md
openspec/changes/add-procurement-intelligence-agent/specs/procurement-agent/: spec.md
openspec/changes/add-procurement-intelligence-agent/specs/procurement-check-tools/: spec.md
openspec/changes/add-procurement-intelligence-agent/specs/procurement-data-loader/: spec.md
openspec/changes/add-procurement-intelligence-agent/specs/procurement-intelligence-agent/: spec.md
openspec/changes/add-procurement-intelligence-agent/specs/procurement-models/: spec.md
solutions/: agent.py  models.py
solutions/data/: __init__.py  loader.py
solutions/tests/: test_agent.py  test_budget.py  test_policy_compliance.py  test_risk_assessment.py  test_vendor_duplication.py
solutions/tools/: __init__.py  budget.py  policy_compliance.py  risk_assessment.py  vendor_duplication.py
tests/: test_budget.py  test_loader_only_data_access.py  test_policy_compliance.py  test_vendor_duplication.py
tools/: budget.py  policy_compliance.py  risk_assessment.py  vendor_duplication.py
(+1 files in other folders)
