[project]
name = "procurement-agent"
version = "0.1.0"
description = "FedEx Procurement and Vendor Intelligence Agent — capstone Track A"
requires-python = ">=3.11"

dependencies = [
    "pydantic-ai>=0.0.14",
    "anthropic>=0.40",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["tools", "data"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
